[gd_scene load_steps=12 format=3 uid="uid://dc877y1onl2b2"]

[ext_resource type="Script" uid="uid://835wmi7qej15" path="res://battle-manager/battlehud/battlehud.gd" id="1_0qukq"]
[ext_resource type="Script" uid="uid://dbbsrqrispnmb" path="res://battle-manager/battlehud/battler_info.gd" id="2_64dmw"]
[ext_resource type="Theme" uid="uid://crdk7x2bxdhob" path="res://replace/theme_test.tres" id="2_uiugx"]
[ext_resource type="PackedScene" uid="uid://xtvr2wp8ojvb" path="res://battle-manager/battlehud/skill-button-preset.tscn" id="4_t5sg5"]

[sub_resource type="GDScript" id="GDScript_mbt63"]
resource_name = "EnemyStats"
script/source = "extends VBoxContainer

# Declare the progress bar node
@onready var name_label = $EnemyNameLabel
@onready var health_bar = $EnemyHealthBar

func add_character(_character: Node):
	pass

func update_enemy_stats(character: Node):
	if character and is_instance_valid(character):
		name_label.text = character.character_name
		health_bar.max_value = character.max_health
		health_bar.value = character.current_health

func update_character_info(character: Node):
	update_enemy_stats(character)
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7jqjx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_skill"]
bg_color = Color(0.12, 0.12, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 1, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_skill_hover"]
bg_color = Color(0.2, 0.25, 0.35, 0.98)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.5, 0.8, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 8
shadow_color = Color(0.3, 0.5, 1, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_skill_pressed"]
bg_color = Color(0.3, 0.4, 0.6, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.9, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Animation" id="Animation_fade_in"]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 50), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_skills"]
_data = {
"fade_in": SubResource("Animation_fade_in")
}

[node name="BattleHUD" type="CanvasLayer" groups=["BattleHud"]]
script = ExtResource("1_0qukq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_uiugx")

[node name="SkillPanel" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_skill")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/SkillPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="Control/SkillPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 24
text = "‚öîÔ∏è SKILLS"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="Control/SkillPanel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/SkillPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="SkillList" type="VBoxContainer" parent="Control/SkillPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ActionButtons" type="HBoxContainer" parent="Control/SkillPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Defend" type="Button" parent="Control/SkillPanel/VBoxContainer/ActionButtons"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_skill")
theme_override_styles/hover = SubResource("StyleBoxFlat_skill_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_skill_pressed")
text = "üõ°Ô∏è Defend"

[node name="Run" type="Button" parent="Control/SkillPanel/VBoxContainer/ActionButtons"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_skill")
theme_override_styles/hover = SubResource("StyleBoxFlat_skill_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_skill_pressed")
text = "üèÉ Run"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/SkillPanel"]
libraries = {
"": SubResource("AnimationLibrary_skills")
}
autoplay = "fade_in"

[node name="Enemies" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -212.0
offset_bottom = 228.0
grow_horizontal = 0

[node name="AllEnemies" type="BoxContainer" parent="Control/Enemies"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
vertical = true

[node name="EnemyStats" type="VBoxContainer" parent="Control/Enemies/AllEnemies"]
layout_mode = 2
script = SubResource("GDScript_mbt63")

[node name="EnemyNameLabel" type="Label" parent="Control/Enemies/AllEnemies/EnemyStats"]
layout_mode = 2
text = "Enemy"
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 20

[node name="EnemyHealthBar" type="ProgressBar" parent="Control/Enemies/AllEnemies/EnemyStats"]
layout_mode = 2
value = 50.0
show_percentage = false

[node name="EnemySPBar" type="ProgressBar" parent="Control/Enemies/AllEnemies/EnemyStats"]
layout_mode = 2
value = 50.0
show_percentage = false

[node name="Players" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 183.0
offset_bottom = 170.0

[node name="AllAllies" type="BoxContainer" parent="Control/Players"]
layout_mode = 0
offset_right = 183.0
offset_bottom = 228.0
vertical = true

[node name="AllyStats" type="VBoxContainer" parent="Control/Players/AllAllies"]
layout_mode = 2
script = ExtResource("2_64dmw")

[node name="PlayerNameLabel" type="Label" parent="Control/Players/AllAllies/AllyStats"]
layout_mode = 2
text = "Hero"
theme_override_colors/font_color = Color(0.3, 0.8, 1, 1)
theme_override_font_sizes/font_size = 20

[node name="PlayerHealthBar" type="ProgressBar" parent="Control/Players/AllAllies/AllyStats"]
layout_mode = 2
value = 50.0
show_percentage = false

[node name="PlayerSPBar" type="ProgressBar" parent="Control/Players/AllAllies/AllyStats"]
layout_mode = 2
value = 50.0
show_percentage = false

[node name="AllyStats2" type="VBoxContainer" parent="Control/Players/AllAllies"]
visible = false
layout_mode = 2
script = ExtResource("2_64dmw")

[node name="PlayerNameLabel" type="Label" parent="Control/Players/AllAllies/AllyStats2"]
layout_mode = 2
text = "Test"

[node name="PlayerHealthBar" type="ProgressBar" parent="Control/Players/AllAllies/AllyStats2"]
layout_mode = 2

[node name="AllyStats3" type="VBoxContainer" parent="Control/Players/AllAllies"]
visible = false
layout_mode = 2
script = ExtResource("2_64dmw")

[node name="PlayerNameLabel" type="Label" parent="Control/Players/AllAllies/AllyStats3"]
layout_mode = 2
text = "Test"

[node name="PlayerHealthBar" type="ProgressBar" parent="Control/Players/AllAllies/AllyStats3"]
layout_mode = 2

[node name="AllyStats4" type="VBoxContainer" parent="Control/Players/AllAllies"]
visible = false
layout_mode = 2
script = ExtResource("2_64dmw")

[node name="PlayerNameLabel" type="Label" parent="Control/Players/AllAllies/AllyStats4"]
layout_mode = 2
text = "Test"

[node name="PlayerHealthBar" type="ProgressBar" parent="Control/Players/AllAllies/AllyStats4"]
layout_mode = 2

[node name="BattleResults" type="Control" parent="Control"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BattleResultLabel" type="Label" parent="Control/BattleResults"]
layout_mode = 0
offset_top = 225.0
offset_right = 1152.0
offset_bottom = 365.0

[node name="Skills" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -164.0
offset_right = 201.0
grow_horizontal = 2
grow_vertical = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Skills"]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7jqjx")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
metadata/_edit_use_anchors_ = true

[node name="BoxContainer" type="BoxContainer" parent="Control/Skills/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical = true

[node name="SkillRow" parent="Control/Skills/ScrollContainer/BoxContainer" instance=ExtResource("4_t5sg5")]
layout_mode = 2
size_flags_vertical = 4

[node name="SkillRow2" parent="Control/Skills/ScrollContainer/BoxContainer" instance=ExtResource("4_t5sg5")]
layout_mode = 2

[node name="Items" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -164.0
offset_right = 201.0
grow_horizontal = 2
grow_vertical = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Items"]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7jqjx")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
metadata/_edit_use_anchors_ = true

[node name="BoxContainer" type="BoxContainer" parent="Control/Items/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical = true

[node name="SkillRow" parent="Control/Items/ScrollContainer/BoxContainer" instance=ExtResource("4_t5sg5")]
layout_mode = 2
size_flags_vertical = 4

[node name="SkillRow2" parent="Control/Items/ScrollContainer/BoxContainer" instance=ExtResource("4_t5sg5")]
layout_mode = 2

[connection signal="pressed" from="Control/SkillPanel/VBoxContainer/ActionButtons/Defend" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="Control/SkillPanel/VBoxContainer/ActionButtons/Run" to="." method="_on_run_pressed"]
